did registration/login/cabin registration forms; did burger menu animation; did modal nav menu on mobile; fixed some font styling issues

--- a/assets/src/style.css
+++ b/assets/src/style.css
@@ -1,3 +1,7 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
+body {
+  font-family: "Ubuntu", sans-serif;
+}
